# The_Code_Factory_Working_V2

./: .coveragerc  .dockerignore  .env.agent_loading  .env.example  .env.production  .env.production.template  .gitignore  .pre-commit-config.yaml  .ruff.toml  =0.25.0  AGENT_CONFIGURATION.md  AGENT_INTEGRATION_SUMMARY.md  AGENT_VERIFICATION_REPORT.md  ANALYSIS_SUMMARY.md  ARBITER_DEEP_DIVE_AUDIT_REPORT.md  ARBITER_IMPORT_CPU_TIMEOUT_FIX.md  ARBITER_IMPORT_FIX.md  ARBITER_INTEGRATION_FIXES.md  ARBITER_INTEGRATION_STATUS.md  ARCHITECTURE_IMPROVEMENTS.md  ATTRIBUTE_ERROR_SPEC_FIX.md  AUDIT_COMPLETE_SUMMARY.md  AUDIT_COMPLETION_REPORT.md  AUDIT_CONFIG_IMPLEMENTATION_SUMMARY.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_IMPLEMENTATION_SUMMARY.md  AUDIT_LOGGER_CONTAINERIZED_FIX.md  AUDIT_SUMMARY.md  BEFORE_AFTER_COMPARISON.md  BUGFIXES_SUMMARY.md  BUG_DETECTION_ANALYSIS.md  BUG_FIXES_SUMMARY.md  CHROMADB_FIX_SUMMARY.md  CICD_PIPELINE_VALIDATION_REPORT.md  CIRCULAR_IMPORT_ASYNC_FIX_SUMMARY.md  CIRCULAR_IMPORT_FIX_SUMMARY.md  CITUS_FIX_VERIFICATION.md  CI_CD_GUIDE.md  CI_FIXES_SUMMARY.md  CLARIFIER_FIXES_SUMMARY.md  (+333 more)
generator/: .gitignore  =4.5.0  AUDIT_CONFIG_README.md  Dockerfile  Dockerfile.deprecated  PRODUCTION_READINESS_REPORT.md  README.md  README_DOCKER.md  __init__.py  arbiter_bridge.py  audit_config.development.yaml  audit_config.enhanced.yaml  audit_config.production.yaml  audit_config.yaml  config.yaml  conftest.py  deterministic.py  dlt_audit_integrity.json  master_requirements.txt  plugins.json  pyproject.toml  pytest_report.xml  requirements.txt  runner_queue.json  tui_stubs.py
generator/agents/: README.md  __init__.py  generator_plugin_wrapper.py  metrics_utils.py  plugin_stubs.py
generator/audit_log/: README.md  __init__.py  audit_log.proto  audit_log.py  audit_log_pb2.py  audit_log_pb2_grpc.py  audit_metrics.py  audit_plugins.py  audit_utils.py  validate_config.py
generator/clarifier/: README.md  __init__.py  _audit_compat.py  clarifier.py  clarifier_llm.py  clarifier_prioritizer.py  clarifier_prompt.py  clarifier_updater.py  clarifier_user_prompt.py
generator/docs/: ARCHITECTURE.md  DEBUGGING_TROUBLESHOOTING.md  DEMO_IMPLEMENTATION.md  DEMO_OVERVIEW.md  DEVELOPMENT.md  EXTENDING_DEMO.md  SECURITY.md  SETUP_GUIDE.md  STARTUP_GUIDE.md  USER_GUIDE.md  patent_doc.md
generator/intent_parser/: README.md  __init__.py  intent_parser.py  intent_parser.yaml  question_loop.py  spec_block.py
generator/main/: README.md  __init__.py  api.py  cli.py  engine.py  gui.py  main.py  post_materialize.py  provenance.py  spec_integration.py  tui.css  validation.py
generator/runner/: __init__.py  alerting.py  feedback_handlers.py  language_utils.py  llm_client.py  llm_plugin_manager.py  llm_provider_base.py  process_utils.py  runner_app.py  runner_audit.py  runner_backends.py  runner_base_types.py  runner_config.py  runner_config.yaml  runner_contracts.py  runner_core.py  runner_errors.py  runner_file_utils.py  runner_logging.py  runner_metrics.py  runner_mutation.py  runner_parsers.py  runner_security_utils.py  summarize_utils.py
generator/scripts/: META_TOOLS_SECURITY_FIXES.md  README.md  bootstrap_agent_dev.py  generate_plugin_manifest.py  migrate_prompts.py
generator/specs/: __init__.py  gdpr.py  hipaa.py  router.py
generator/tests/: __init__.py  conftest.py  test_agents_codegen_agent.py  test_agents_codegen_integration.py  test_agents_codegen_prompt.py  test_agents_codegen_response_handler.py  test_agents_critique_agent.py  test_agents_critique_fixer.py  test_agents_critique_integration.py  test_agents_critique_linter.py  test_agents_critique_prompt.py  test_agents_deploy_agent.py  test_agents_deploy_agent_integration.py  test_agents_deploy_prompt.py  test_agents_deploy_response_handler.py  test_agents_deploy_validator.py  test_agents_docgen_agent.py  test_agents_docgen_integration.py  test_agents_docgen_prompt.py  test_agents_docgen_response_validator.py  test_agents_generator_plugin_wrapper.py  test_agents_syntax_auto_repair.py  test_agents_testgen_agent.py  test_agents_testgen_prompt.py  test_agents_testgen_response_handler.py  test_agents_testgen_validator.py  test_ast_endpoint_extractor_wiring.py  test_audit_backend_railway_mode.py  test_audit_crypto_bug_fixes.py  test_audit_log_audit_backend_cloud.py  test_audit_log_audit_backend_core.py  test_audit_log_audit_backend_file_sql.py  test_audit_log_audit_backend_streaming_backends.py  test_audit_log_audit_backend_streaming_utils.py  test_audit_log_audit_crypto_factory.py  test_audit_log_audit_crypto_ops.py  test_audit_log_audit_crypto_provider.py  test_audit_log_audit_keystore.py  test_audit_log_audit_log.py  test_audit_log_audit_metrics.py  (+70 more)
omnicore_engine/: README.md  __init__.py  array_backend.py  audit.py  audit_config.yaml  benchmarking_engine.py  cli.py  config_validator.py  core.py  engines.py  event_store.py  fastapi_app.py  meta_supervisor.py  metrics.py  metrics_utils.py  plugin_base.py  plugin_event_handler.py  plugin_registry.py  plugins.json  pyproject.toml  requirements.txt  retry_compat.py  scenario_constants.py  scenario_plugin_manager.py  secrets_manager.py  security_config.py  security_integration.py  security_production.py  security_utils.py  sharding.py  worker_utils.py
self_fixing_engineer/: .env.example  .gitignore  =4.2.0  ARBITER_COMPLETE_REFERENCE.md  ARCHITECTURE_OVERVIEW.md  COMPLETE_API_REFERENCE.txt  DEEP_AUDIT_REPORT.md  DEMO_GUIDE.md  DefaultCodeGuardianArena_codebase_map.json  ENVIRONMENT_SETUP.md  EXHAUSTIVE_API_REFERENCE.md  FINAL_AUDIT_SUMMARY.md  FUNCTIONS_AND_FEATURES.md  IMPLEMENTATION_SUMMARY.md  README.md  SAMPLE_CODEBASE.md  SECURITY_ACTION_PLAN.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES_REPORT.md  SQL_INJECTION_AUDIT.md  TROUBLESHOOTING.md  __init__.py  agentic_audit.jsonl  agentic_audit_integrity.json  audit.log.json  audit_config.yaml  audit_log.jsonl  auto_fix_tests.py  cli.py  codebase_report.markdown  config.py  conftest.py  coverage_history.json  dlt_audit.jsonl  dlt_audit_integrity.json  evolution.py  exceptions.py  installed_packages.txt  main.py  meta_learning.pkl  (+21 more)
(+1713 files in other folders)
