[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-factory"
version = "1.0.0"
description = "Unified Code Factory Platform - AI-driven ecosystem for automated software development and maintenance"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Novatrax Labs", email = "support@novatraxlabs.com"}
]
keywords = ["ai", "code-generation", "self-healing", "automation", "devops"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]

# Note: This is a unified platform consisting of three integrated modules:
# - generator: README-to-App Code Generator (RCG)
# - omnicore_engine: OmniCore Omega Pro Engine
# - self_fixing_engineer: Self-Fixing Engineer (SFE) powered by Arbiter AI
# All modules share a single unified requirements.txt

[tool.setuptools.packages.find]
where = ["."]
include = ["generator*", "omnicore_engine*", "self_fixing_engineer*", "server*"]

[tool.pytest.ini_options]
minversion = "7.4"
pythonpath = ["."]
# Prevent expensive plugin loading during collection to avoid CPU timeout
# - no:randomly: Disable pytest-randomly plugin (if installed) to reduce collection overhead
# - no:cacheprovider: Disable pytest cache to avoid filesystem overhead during collection
# - import-mode=importlib: Use importlib for faster, more reliable imports
# - maxfail=5: Stop after 5 failures to save time
# NOTE: pytest-xdist options (-n, --forked) removed from addopts.
# CI workflow controls parallelism via command line, and having these in addopts
# caused conflicts when workflows disabled parallelism for memory-intensive modules.
addopts = "-ra -q --tb=short -p no:randomly -p no:cacheprovider --import-mode=importlib --maxfail=5"
# REMOVED: testpaths configuration
# Test directories should be specified on the command line to prevent pytest from
# automatically scanning and loading all test modules during pytest initialization.
# This was causing CPU time limit exceeded errors (exit code 152) in CI because
# pytest was importing heavy dependencies (torch, transformers, etc.) during startup.
# See .github/workflows/pytest-all.yml for the test directories to run.
python_files = ["test_*.py"]
asyncio_mode = "auto"
# Timeout configuration - prevent individual tests from hanging
timeout = 30
timeout_method = "thread"
timeout_func_only = true
# Directories to ignore during collection to reduce overhead
# Using patterns that match directory basenames
norecursedirs = ".* _* build dist venv env node_modules __pycache__"
# Custom markers for test categorization
markers = [
    "slow: marks tests as slow (deselected by default in CI)",
    "integration: marks tests as integration tests (deselected by default in CI)",
    "requires_redis: marks tests that require Redis connection",
    "forked: marks tests that should run in isolated forked process",
    "flaky: marks tests as flaky (may need retries)",
]
# NOTE: Environment variables for tests are set in the CI workflow (.github/workflows/pytest-all.yml)
# The 'env' configuration option requires pytest-env plugin which is not installed.
# Required env vars for tests: TESTING=1, CI=1, SKIP_AUDIT_INIT=1, SKIP_BACKGROUND_TASKS=1,
# NO_MONITORING=1, DISABLE_TELEMETRY=1, OTEL_SDK_DISABLED=1
# Filter warnings from various modules
filterwarnings = [
    # Pydantic V1 -> V2 Deprecation Warnings (from omnicore_engine)
    "ignore:.*PydanticDeprecatedSince20.*:DeprecationWarning",
    "ignore:Pydantic V1 style `@validator` validators are deprecated:DeprecationWarning",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    # SQLAlchemy warnings (from omnicore_engine)
    "ignore:The ``declarative_base\\(\\)`` function is now available as sqlalchemy\\.orm\\.declarative_base\\(\\).:DeprecationWarning",
    # OpenTelemetry warnings (from self_fixing_engineer)
    "ignore:Overriding of current TracerProvider is not allowed:UserWarning",
    "ignore:.*OpenTelemetry.*:UserWarning",
    "ignore:Transient error StatusCode.UNAVAILABLE:UserWarning",
    # Prometheus warnings (from self_fixing_engineer)
    "ignore:.*duplicated timeseries.*:UserWarning",
    "ignore:prometheus_client version.*:UserWarning",
    "ignore:Duplicated timeseries in CollectorRegistry.*:UserWarning",
    # Package warnings (from self_fixing_engineer)
    "ignore:pkg_resources is deprecated:DeprecationWarning",
    "ignore:Deprecated call to `pkg_resources.declare_namespace.*:DeprecationWarning",
    # LangChain warnings (from self_fixing_engineer)
    "ignore:Field \"model_name\" in .*:UserWarning",
    # General deprecation warnings
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '.pyi?$'
exclude = '''
/(
    .git
  | .hg
  | .mypy_cache
  | .tox
  | .venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.ruff.lint]
extend-ignore = [
    "E402",  # module level import not at top
    "E712",  # comparison to True/False
    "E721",  # type comparison - use isinstance() instead
    "E722",  # bare except
    "E741",  # ambiguous variable name
    "F401",  # unused import
    "F403",  # undefined local with import star
    "F405",  # may be undefined from star imports
    "F811",  # redefinition of unused variable
    "F821",  # undefined name
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
