# Copyright © 2025 Novatrax Labs LLC. All Rights Reserved.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generator"
version = "0.1.0"

[tool.setuptools]
packages = [
    "agents",
    "audit_log",
    "clarifier",
    "intent_parser",
    "main",
    "providers",
    "runner",
    "utils"
]