# Copyright © 2025 Novatrax Labs LLC. All Rights Reserved.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnicore-engine"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["omnicore_engine*"]